--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,12 +24,21 @@
                     <li class="nav-item active">
                         <a class="nav-link" aria-current="page" href="/Home/Index">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/Home/About">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/Home/Contact">Contact</a>
-                    </li>
+                    @if (User.IsInRole("User"))
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Home/About">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Home/Contact">Contact</a>
+                        </li>
+                    }
+                    @if (User.IsInRole("Administrator"))
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Users/Index">Manage users</a>
+                        </li>
+                    }
 
                 </ul>
             </div>
