Added profile photo

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <body style="background-color:#eee" class="vh-100 container h-100">
-<!-- Jumbotron -->
+    <!-- Jumbotron -->
     <div class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white "
          style="background-image: url('https://i.pinimg.com/736x/9a/5b/80/9a5b801611e55768c1ad136802b357c9.jpg'); ">
         <h1 class="mb-3 h2">Medical Office</h1>
@@ -15,20 +15,21 @@
     </div>
 
 
-<!-- Jumbotron -->
+    <!-- Jumbotron -->
 
     <div class="card-group">
         <div class="card">
-            <img src="https://i.pinimg.com/236x/e8/3f/72/e83f729ee8db3ec2b32becbae30de540.jpg" class="card-img-top" alt="Department Image" height="500 px"/>
+            <img src="https://i.pinimg.com/236x/e8/3f/72/e83f729ee8db3ec2b32becbae30de540.jpg" class="card-img-top" alt="Department Image" height="500 px" />
             <div class="card-body">
                 <h5 class="card-title">Departamente</h5>
                 <p class="card-text">
                     Esti curios cu ce te putem ajuta? Mai jos gasesti o lista cu toate departamentele noastre!
                 </p>
-                <button type="button" class="btn btn-outline-dark" data-mdb-ripple-color="dark">Button
+                <button type="button" class="btn btn-outline-dark" data-mdb-ripple-color="dark">
+                    Button
                 </button>
             </div>
-            
+
         </div>
         <div class="card">
             <img src="https://i.pinimg.com/736x/b1/fb/e9/b1fbe94a1d394ad38057a111e0c771cc.jpg" class="card-img-top" alt="Locations Image" height="500 px" />
@@ -40,7 +41,7 @@
                     Button
                 </button>
             </div>
-            
+
 
         </div>
         <div class="card">
@@ -55,7 +56,7 @@
                     Button
                 </button>
             </div>
-           
+
 
         </div>
     </div>
