--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,13 +21,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarExample01">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    
                     <li class="nav-item active">
-                        <a class="nav-link" aria-current="page" href="/Home/Index">Home</a>
+                        <a class="nav-link" aria-current="page" href="/Home/Index">Acasa</a>
                     </li>
                     @if (User.IsInRole("User"))
                     {
                         <li class="nav-item">
-                            <a class="nav-link" href="/Home/About">About</a>
+                            <a class="nav-link" href="/Home/About">Despre noi</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/Home/Contact">Contact</a>
@@ -36,7 +37,16 @@
                     @if (User.IsInRole("Administrator"))
                     {
                         <li class="nav-item">
-                            <a class="nav-link" href="/Users/Index">Manage users</a>
+                            <a class="nav-link" href="/Users/Index">Utilizatori</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Users/Index">Locatii</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Users/Index">Departamente</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Users/Index">Doctori</a>
                         </li>
                     }
 
