--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -11,15 +11,15 @@
 
     <ul class="list-group list-group-light align-content-center align-items-center">
         <li class="list-group-item d-flex justify-content-between align-items-center">
-            <div class="row align-content-center align-items-center">
+            <div class="row align-content-center align-items-center" >
 
                 @foreach (var user in ViewBag.UsersList)
                 {
                     <div class="col-xl-6 col-lg-4  mb-4 ">
 
-                        <div class="card">
+                        <div class="card ">
 
-                            <div class="card-body">
+                            <div class="card-body" style="background-color: #ffcccc">
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="d-flex align-items-center">
                                         <div class="ms-3">
