--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -18,7 +18,7 @@
 
 
 
-                                    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal mx-1 mx-md-4", role = "form" }))
+                                    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal mx-1 mx-md-4", role = "form", enctype = "multipart/form-data" }))
                                     {
                                         @Html.AntiForgeryToken()
                                         <h4>Create a new account.</h4>
@@ -42,6 +42,16 @@
                                                 @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
                                             </div>
                                         </div>
+
+                                        <div class="form-group">
+                                            @Html.LabelFor(m => m.UserPhoto, new { @class = "col-md-10 control-label" })
+                                            <div class="col-md-10 ">
+                                                <input type="file" name="UserPhoto" id="fileUpload" accept=".png,.jpg,.jpeg,.gif,.tif" />
+                                            </div>
+                                        </div>
+
+
+
                                         <div class="form-group">
                                             <div class="d-flex justify-content-center align-items-center mx-4 mb-3 mb-lg-4">
                                                 <input type="submit" class="btn btn-primary btn-lg" value="Register" />
