--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -25,6 +25,18 @@
                                         <hr />
                                         @Html.ValidationSummary("", new { @class = "text-danger" })
                                         <div class="form-group">
+                                            @Html.LabelFor(m => m.LastName, new { @class = "col-md-10 d-flex flex-row align-items-center  mb-4 control-label" })
+                                            <div class="col-md-10 d-flex flex-row align-items-center mb-4">
+                                                @Html.TextBoxFor(m => m.LastName, new { @class = "form-control " })
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            @Html.LabelFor(m => m.FirstName, new { @class = "col-md-10 d-flex flex-row align-items-center  mb-4 control-label" })
+                                            <div class="col-md-10 d-flex flex-row align-items-center mb-4">
+                                                @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control " })
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
                                             @Html.LabelFor(m => m.Email, new { @class = "col-md-10 d-flex flex-row align-items-center  mb-4 control-label" })
                                             <div class="col-md-10 d-flex flex-row align-items-center mb-4">
                                                 @Html.TextBoxFor(m => m.Email, new { @class = "form-control " })
