--- a/Views/Investigations/Index.cshtml
+++ b/Views/Investigations/Index.cshtml
@@ -33,7 +33,8 @@
                         {
                             <td>
                                 <button type="button" class="btn btn-link btn-sm px-3" data-ripple-color="dark">
-                                    Edit
+                                    @Html.ActionLink("Editeaza", "Edit", "Investigations", new { id=investigation.InvestigationId }, null)
+                                   
                                 </button>
                             </td>
                         }
