Added some design

--- a/Views/Investigations/Edit.cshtml
+++ b/Views/Investigations/Edit.cshtml
@@ -12,7 +12,7 @@
                 <div class="col-lg-12 col-xl-11">
                     <div class="card text-black align-content-center align-items-center" style="border-radius: 25px;">
                         <div class="card-body p-md-5">
-                            <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Editare Utilizator </p>
+                            <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Editare Investigatie </p>
                             <div class="row justify-content-center">
                                 <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
