--- a/Views/Investigations/New.cshtml
+++ b/Views/Investigations/New.cshtml
@@ -14,14 +14,13 @@
                 <div class="col-lg-12 col-xl-11">
                     <div class="card text-black align-content-center align-items-center" style="border-radius: 25px;">
                         <div class="card-body p-md-5">
-                            <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Editare Utilizator </p>
+                            <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Adaugare Investigatie </p>
                             <div class="row justify-content-center">
                                 <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
                                     @using (Html.BeginForm(actionName: "New", controllerName: "Investigations"))
                                     {
                                         
-
                                         <div class="form-group">
 
                                             @Html.Label("Name", "Nume investigatie", new { @class = "col-md-10 d-flex flex-row align-items-center  mb-4 control-label" })
@@ -31,8 +30,6 @@
                                                 @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
                                             </div>
                                         </div>
-
-
 
                                         <div class="form-group">
 
@@ -49,7 +46,7 @@
 
                                         <div class="form-group">
                                             <i class="glyphicon glyphicon-th-list"></i>
-                                            <label>Selectati rolul</label>
+                                            <label>Selectati Departamentul</label>
                                             @Html.DropDownListFor(m=> m.DepartmentId, new SelectList(Model.Departments, "Value", "Text"), "Selectati departamentul" , new { @class = "form-control" })
                                         </div>
                                         <br />
