--- a/Views/Locations/New.cshtml
+++ b/Views/Locations/New.cshtml
@@ -3,22 +3,107 @@
     ViewBag.Title = "New";
 }
 
-<h2>New</h2>
 
 
-<form method="post" action="/Locations/New">
-    <label>Oras</label>
-    <input type="text" name="City" />
-    <br />
-    <label>Adresa</label>
-    <input type="text" name="Address" />
-    <br />
-    <label>Latitudine</label>
-    <input type="text" name="Latitude" />
-    <br />
-    <label>Longitudine</label>
-    <input type="text" name="Longitude" />
-    <br />
 
-    <button type="submit">Adauga Locatie</button>
-</form>
+<body style="background-color: #eee;">
+
+    <section class="vh-100">
+        <div class="container h-100 align-content-center align-items-center">
+
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-lg-12 col-xl-11">
+                    <div class="card text-black align-content-center align-items-center" style="border-radius: 25px;">
+                        <div class="card-body p-md-5">
+                            <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Adaugare Locatie </p>
+                            <div class="row justify-content-center">
+                                <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
+
+                                    @using (Html.BeginForm(actionName: "New", controllerName: "Locations"))
+                                    {
+
+                                        <div class="form-group">
+
+                                            @Html.Label("City", "Nume oras", new { @class = "col-md-10 d-flex flex-row align-items-center  mb-4 control-label" })
+
+                                            <div class="col-md-10 d-flex flex-row align-items-center mb-4">
+
+                                                @Html.TextBoxFor(m => m.City, new { @class = "form-control" })
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group">
+
+                                            @Html.Label("Address", "Adresa", new { @class = "col-md-10 d-flex flex-row align-items-center  mb-4 control-label" })
+
+
+                                            <div class="col-md-10 d-flex flex-row align-items-center mb-4">
+
+                                                @Html.TextBoxFor(m => m.Address, new { @class = "form-control" })
+
+
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group">
+
+                                            @Html.Label("Latitude", "Latitudine", new { @class = "col-md-10 d-flex flex-row align-items-center  mb-4 control-label" })
+
+
+                                            <div class="col-md-10 d-flex flex-row align-items-center mb-4">
+
+                                                @Html.TextBoxFor(m => m.Latitude, new { @class = "form-control" })
+
+
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group">
+
+                                            @Html.Label("Longitude", "Longitudine", new { @class = "col-md-10 d-flex flex-row align-items-center  mb-4 control-label" })
+
+
+                                            <div class="col-md-10 d-flex flex-row align-items-center mb-4">
+
+                                                @Html.TextBoxFor(m => m.Longitude, new { @class = "form-control" })
+
+
+                                            </div>
+                                        </div>
+
+
+
+                                        <div class="form-group">
+                                            <div class="row mb-4">
+                                                <div class="col d-flex justify-content-center">
+
+                                                    <div class="col-md-10 d-flex flex-row align-items-center mb-4">
+
+                                                        <button class="btn btn-sm btn-success" type="submit">
+                                                            Adauga Locatia
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    }
+                                </div>
+                                <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+
+                                    <img src="https://media.istockphoto.com/vectors/red-pin-location-with-hospital-icon-inside-vector-illustration-vector-id1394152100?b=1&k=20&m=1394152100&s=170667a&w=0&h=JHQDCuZwi_wVy6c1h5t5kCwsu8Q81vNk_9B7OaZy3V0="
+                                         class="img-fluid" alt="Sample image" />
+
+                                </div>
+
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
+</body>
