--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
                     Esti curios cu ce te putem ajuta? Mai jos gasesti o lista cu toate departamentele noastre!
                 </p>
                 <button type="button" class="btn btn-outline-dark" data-mdb-ripple-color="dark">
-                    Button
+                    Vezi lista
                 </button>
             </div>
 
@@ -38,7 +38,7 @@
                 <p class="card-text">Nu esti sigur daca avem cabinet in orasul tau? Verifica lista de mai jos!</p>
 
                 <button type="button" class="btn btn-outline-dark" data-mdb-ripple-color="dark">
-                    Button
+                    Vezi lista
                 </button>
             </div>
 
@@ -53,7 +53,7 @@
                 </p>
 
                 <button type="button" class="btn btn-outline-dark" data-mdb-ripple-color="dark">
-                    Button
+                    Vezi lista
                 </button>
             </div>
 
