--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -10,62 +10,62 @@
         <div class="container h-100 align-content-center align-items-center" style="border-radius: 15px;">
             <br />
             <br />
-            <h3 class="align-content-center">Afisare utilizatori</h3>
+            <h3 class="text-center">Afisare utilizatori</h3>
             <br />
             <br />
 
             <ul class="list-group list-group-light align-content-center align-items-center " style="border-radius: 15px;">
                 
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    
+                    <div class="row align-content-center align-items-center">
 
-                        <div class="row align-content-center align-items-center">
+                        @foreach (var user in ViewBag.UsersList)
+                        {
+                            <div class="col-xl-6 col-lg-4  mb-4 ">
 
-                            @foreach (var user in ViewBag.UsersList)
-                            {
-                                <div class="col-xl-6 col-lg-4  mb-4 ">
+                                <div class="card ">
 
-                                    <div class="card ">
-
-                                        <div class="card-body" style="background-color: #ffcccc">
-                                            <div class="d-flex justify-content-between align-items-center">
-                                                <div class="d-flex align-items-center">
-                                                    <div class="ms-3">
-                                                        <p class="fw-bold mb-1">@user.UserName</p>
-                                                        <p class="text-muted mb-0">@user.Email</p>
-                                                    </div>
+                                    <div class="card-body" style="background-color: #ffcccc">
+                                        <div class="d-flex justify-content-between align-items-center">
+                                            <div class="d-flex align-items-center">
+                                                <div class="ms-3">
+                                                    <p class="fw-bold mb-1">@user.UserName</p>
+                                                    <p class="text-muted mb-0">@user.Email</p>
                                                 </div>
-                                                <span class="badge rounded-pill badge-success"></span>
                                             </div>
+                                            <span class="badge rounded-pill badge-success"></span>
                                         </div>
-                                        <div class="card-footer border-0 bg-light p-2 d-flex justify-content-around">
-                                            <a class="btn btn-link m-0 text-reset"
-                                               href="/Users/Edit/@user.Id"
-                                               role="button"
-                                               data-ripple-color="primary">
-                                                Edit
-                                            </a>
-                                            <a class="btn btn-link m-0 text-reset"
-                                               href="/Users/Show/@user.Id"
-                                               role="button"
-                                               data-ripple-color="primary">
-                                                Show
-                                            </a>
+                                    </div>
+                                    <div class="card-footer border-0 bg-light p-2 d-flex justify-content-around">
+                                        <a class="btn btn-link m-0 text-reset"
+                                           href="/Users/Edit/@user.Id"
+                                           role="button"
+                                           data-ripple-color="primary">
+                                            Editeaza
+                                        </a>
+                                        <a class="btn btn-link m-0 text-reset"
+                                           href="/Users/Show/@user.Id"
+                                           role="button"
+                                           data-ripple-color="primary">
+                                            Arata
+                                        </a>
 
-                                            
 
-                                        </div>
 
                                     </div>
 
                                 </div>
 
+                            </div>
 
-                            }
+
+                        }
 
 
-                        </div>
-                    </li>
-                </div>
+                    </div>
+                </li>
+</div>
             </ul>
         </div>
     </section>
